<resources>
    <string name="app_fname">Name</string>
    <string name="app_email">Email</string>
    <string name="app_password">Password</string>
    <string name="app_name">Pocket Genius</string>
    <string name="app_nameGenius">Hi I am your poket Genius! Let s create Characters for you!</string>
    <string name="app_nameRusGenius">Привет, я гений из кармана, ваш преданный помошник!</string>
    <string name="app_nameR">Карманный Гений</string>
    <string name="app_buttonLogin">Login</string>
    <string name="app_signUp">Sign Up</string>
    <string name="app_ClikType">Click on a type of your character</string>
    <string name="app_SelectType">Select a type of your character</string>
    <string name="app_SelectProperties">Select necessary properties of your character</string>
    <string name="app_TypeOfCharacter">Type of character</string>
    <string name="app_btnNext">Next</string>
    <string name="app_btnPrevious">Previous</string>
    <string name="app_btnGetType">Get This Type</string>
    <string name="app_name1">Tyrant</string>
    <string name="app_selectMF">Select Main Features</string>

    <string name="app_selectAll">Select All</string>
    <string name="app_selectAllR">Выбрать все</string>
    <string name="app_portrayalR">Портрет</string>
    <string name="app_AgeR">Возраст</string>
    <string name="app_nationalityR">"Национальность</string>
    <string name="app_FloorR">Пол</string>
    <string name="app_NameR">Имя</string>
    <string name="app_middleNameR">Фамилия</string>
    <string name="app_SurnameR">Отчество</string>
    <string name="app_DateofBirthR">Дата рождения</string>
    <string name="app_TimeofbirthR">Время рождения</string>
    <string name="app_WesternastrologicalsignR">Западный астрологический знак</string>
    <string name="app_ChinesezodiacsignR">Китайский знак зодиака</string>
    <string name="app_HowoldR">На сколько лет выглядит</string>
    <string name="app_BodytypeR">Телосложение</string>
    <string name="app_GrowthR">Рост</string>
    <string name="app_WeightR">Вес</string>
    <string name="app_ColoroftheskinR">Цвет кожи</string>
    <string name="app_SkinTypeR">Тип кожи</string>
    <string name="app_FaceshapeR">Форма лица</string>
    <string name="app_HairR">Волосы</string>
    <string name="app_EyebrowsR">Брови</string>
    <string name="app_EyesR">Глаза</string>
    <string name="app_ExpressionOfTheEyesR">Выражение глаз</string>
    <string name="app_EyelashesR">Ресницы</string>
    <string name="app_FaceDetailsR">Детали лица</string>
    <string name="app_FacialExpressionR">Выражение лица</string>
    <string name="app_DistinctiveFeaturesR">Отличительные черты</string>
    <string name="app_ChinR">Подбородок</string>
    <string name="app_NoseR">Нос</string>
    <string name="app_TeethR">Зубы</string>
    <string name="app_VoteR">Голос</string>
    <string name="app_StyleR">Стиль (образ)</string>
    <string name="app_InterestsR">Интересы</string>
    <string name="app_TastesR">Вкусы</string>
    <string name="app_GesturesR">Жесты</string>
    <string name="app_FavoritePositionR">Любимая поза</string>
    <string name="app_GaitR">Походка</string>
    <string name="app_ThePredominantFeatureR">Преобладающая черт</string>
    <string name="app_WhoIsItLikeR">На кого похож</string>
    <string name="app_HerFeaturesR">Особенности Героя</string>
    <string name="app_PostponedDiseasesR">Перенесенные болезни</string>
    <string name="app_AllergyR">Аллергия</string>
    <string name="app_ChronicdiseasesR">Хронические болезни</string>
    <string name="app_FeaturesofspeechR">Особенности речи</string>
    <string name="app_portrayal">Portrayal</string>
    <string name="app_Age">Age</string>
    <string name="app_Nationality">Nationality</string>
    <string name="app_sex">Grnder</string>
    <string name="app_Name">First Name</string>
    <string name="app_Surname">Last Name</string>
    <string name="app_DateOfBirth">Date of Birth</string>
    <string name="app_TimeOfBirth">Time of birth (morning, noon, evening) </string>
    <string name="app_WesternAstrologicalSign">Western astrological sign</string>
    <string name="app_ChineseZodiacSign">Chinese zodiac sign</string>
    <string name="app_HowOldIsIt">How old is it?</string>
    <string name="app_BodyType">Body type</string>
    <string name="app_Growth">Growth</string>
    <string name="app_Weight">Weight, kg</string>
    <string name="app_ColorOfTheSkin">Color of the skin</string>
    <string name="app_SkinType">Skin Type</string>
    <string name="app_FacShape">Face shape</string>
    <string name="app_Hair">Hair</string>
    <string name="app_Eyebrows">Eyebrows</string>
    <string name="app_Eyes">Eyes</string>
    <string name="app_ExpressionOfTheEyes">Expression of the eyes</string>
    <string name="app_Eyelashes">Eyelashes</string>
    <string name="app_FaceDetails">Face Details</string>
    <string name="app_FacialExpression">Facial expression</string>
    <string name="app_DistinctiveFeatures">Distinctive features</string>
    <string name="app_Chin">Chin</string>
    <string name="app_Nose">Nose</string>
    <string name="app_Teeth">Teeth</string>
    <string name="app_Figure">Figure</string>
    <string name="app_Vote">Vote</string>
    <string name="app_Style">Style (image)</string>
    <string name="app_Interests">Interests</string>
    <string name="app_Tastes">Tastes</string>
    <string name="app_Gestures">Gestures</string>
    <string name="app_FavoritePosition">Favorite position</string>
    <string name="app_Gait">Gait</string>
    <string name="app_ThePredominantFeature">The predominant feature</string>
    <string name="app_WhoIsItLike">Who is it like</string>
    <string name="app_HeroFeatures">Hero Features</string>
    <string name="app_PostponedDiseases">Postponed diseases</string>
    <string name="app_Allergy">Allergy</string>
    <string name="app_ChronicDiseases">Chronic diseases</string>
    <string name="app_FeaturesOfSpeech">Features of speech</string>
    <string name="app_biography">Biography</string>
    <string name="app_biographyR">Биография</string>
    <string name="app_psDescription">Psychology</string>
    <string name="app_psDescriptionR">Психологическое описание</string>
    <string name="app_goals">Goals</string>
    <string name="app_goalsR">Цели</string>
    <string name="app_values">Values</string>
    <string name="app_valuesR">Ценности</string>
    <string name="app_skeletons">Skeletons in the closet</string>
    <string name="app_skeletonsR">Скелеты в шкафу</string>
    <string name="app_allmainfeatures">All Main Features</string>
    <string name="app_allmainfeaturesR">Все главные характеристики</string>
    <string name="app_back">Back</string>
    <string name="app_backR">Назад</string>
    <string name="app_update">Get New Pattern</string>
    <string name="app_updateR">Получить новую выборку</string>
    <string name="app_save">Save in my project</string>
    <string name="app_saveR">Сохранить в моем проекте</string>
    <string name="app_buy">In Cart</string>
    <string name="app_buyR">Положить в корзину</string>

    <string name="f_name">Name</string>
    <string name="address">Address</string>
    <string name="cellPhone">Cell Phone</string>
    <string name="questions">Questions</string>
    <string name="composeMail">Compose report</string>
</resources>
